# freshermeat

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  Pipfile  README.md  README.rst  SECURITY.md  app.py  bower.json  create_db.sh  drop_db.sh  manager.py  package-lock.json  package.json  pyproject.toml  requirements.txt  runserver.py  test-init-db.sh
freshermeat/: __init__.py  bootstrap.py  commands.py  conf.py
freshermeat/lib/: decorators.py  misc_utils.py  utils.py
freshermeat/models/: __init__.py  code.py  cve.py  feed.py  icon.py  language.py  license.py  news.py  organization.py  project.py  release.py  submission.py  tag.py  user.py
freshermeat/notifications/: notifications.py
freshermeat/scripts/: __init__.py  create_user.py  import_github.py  import_gitlab.py  import_languages.py  import_licenses.py
freshermeat/static/css/: custom.css
freshermeat/static/js/: templates.js  utils.js
freshermeat/templates/: about.html  code.html  edit_organization.html  edit_project.html  edit_releases.html  edit_user.html  feed.html  human.txt  index.html  layout.html  login.html  organization.html  organizations.html  project.html  projects.html  robots.txt  security.txt  service.html  settings.html  stats.html  submit.html  user.html
freshermeat/templates/admin/: request.html  requests.html  submission.html  submissions.html  users.html
freshermeat/templates/errors/: 404.html  500.html  503.html
freshermeat/web/: forms.py
freshermeat/web/utils/: misc.py  spawn.py
freshermeat/web/views/: __init__.py  admin.py  common.py  organization.py  project.py  session_mgmt.py  stats.py  submission.py  user.py  views.py
freshermeat/workers/: fetch_cve.py  fetch_project_news.py  fetch_release.py
instance/: development.py  sqlite.py
migrations/: env.py
migrations/versions/: 14ddbf5ff3cd_add_a_new_association_table_for_the_.py  55430794598d_added_apikey_attribute_to_user.py  67162b122350_addedsubmitteridcolumninprojecttable.py  71823751a67e_add_new_tables_for_the_submissions.py  8fa2825a3ed5_removed_the_table_service.py  ca38dde2c84e_update_model_for_the_news_of_projects.py
src/: bootstrap.py  conf.py  manager.py  runserver.py
src/instance/: conf.cfg  conf.cfg-sample  development.cfg  production.cfg
src/lib/: checks.py  decorators.py  utils.py
src/notifications/: emails.py  notifications.py
src/scripts/: __init__.py  create_user.py  import_github.py  import_gitlab.py  import_languages.py  import_licenses.py  import_projects.py  import_projects_from_github.py  import_services.py
src/web/: __init__.py  forms.py
src/web/models/: __init__.py  article.py  code.py  cve.py  feed.py  language.py  license.py  news.py  organization.py  profile.py  project.py  release.py  request.py  service.py  submission.py  tag.py  user.py  user_information.py
src/web/templates/: about.html  code.html  edit_organization.html  edit_project.html  edit_releases.html  feed.html  index.html  layout.html  login.html  organization.html  organizations.html  project.html  projects.html  service.html  services.html  settings.html  stats.html  submit.html  user.html
src/web/utils/: misc.py  spawn.py
src/web/views/: __init__.py  admin.py  common.py  organization.py  project.py  service.py  session_mgmt.py  stats.py  submission.py  user.py  (+1 more)
src/workers/: fetch_cve.py  fetch_project_news.py  fetch_release.py  fetch_release_github.py
var/: languages.json  licenses.json  projects.json  services.json
(+52 files in other folders)
