[tool.poetry]
name = "freshermeat"
version = "0.7"
description = "Freshermeat is an open source software directory and release tracker."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.13"
Flask = "^1.1.1"
Flask-SQLAlchemy = "^2.4.1"
Flask-Login = "^0.4.1"
Flask-Principal = "^0.4.0"
Flask-WTF = "^0.14.2"
Flask-Restless = "^0.17.0"
Flask-Migrate = "^2.5.2"
Flask-Script = "^2.0.6"
Flask-Admin = "^1.5.4"
Flask-paginate = "^0.5.5"
Flask-Mail = "^0.9.1"
WTForms = "^2.2.1"
validate_email = "^1.3"
alembic = "^1.3.3"
maya = "^0.6.1"
feedparser = "^5.2.1"
psycopg2-binary = "^2.8.4"
pycvesearch = {git = "https://github.com/cve-search/PyCVESearch.git"}
flask_restx = "^0.2.0"
feedgen = "^0.9.0"


[tool.poetry.dev-dependencies]
sqlalchemy-schemadisplay = "^1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
