[tool.poetry]
name = "freshermeat"
version = "0.8.1"
description = "Freshermeat is an open source software directory and release tracker."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.3.13"
Flask = "^2.1.1"
werkzeug = "2.0.3"
Flask-SQLAlchemy = "^2.5.1"
Flask-Login = "^0.6.0"
Flask-Principal = "^0.4.0"
Flask-WTF = "^1.0.1"
Flask-Migrate = "^2.5.2"
Flask-Admin = "^1.6.0"
Flask-paginate = "^0.5.5"
Flask-Mail = "^0.9.1"
WTForms = "^3.0.1"
validate_email = "^1.3"
alembic = "^1.7.7"
maya = "^0.6.1"
feedparser = "^6.0.8"
psycopg2-binary = "^2.8.4"
flask_restx = "^0.5.1"
feedgen = "^0.9.0"
requests = "^2.27.1"


[tool.poetry.group.dev.dependencies]
sqlalchemy-schemadisplay = "^1.3"
pre-commit = "^2.18.1"
black = "^22.3.0"
pyupgrade = "^2.31.1"
reorder-python-imports = "^3.0.1"
pip-audit = "^2.4.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
