[tool.poetry]
name = "freshermeat"
version = "0.8.1"
description = "Freshermeat is an open source software directory and release tracker."
authors = ["Cédric Bonhomme <cedric@cedricbonhomme.org>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^2.0.23"
Flask = "^3.0.0"
werkzeug = "3.1.5"
Flask-SQLAlchemy = "^3.1.1"
Flask-Login = "^0.6.3"
Flask-Principal = "^0.4.0"
Flask-WTF = "^1.0.1"
Flask-Migrate = "^2.5.2"
Flask-Admin = "^1.6.0"
Flask-paginate = "^2023.10.24"
Flask-Mail = "^0.9.1"
WTForms = "^3.0.1"
validate_email = "^1.3"
alembic = "^1.7.7"
maya = "^0.6.1"
feedparser = "^6.0.8"
psycopg2-binary = "^2.9.9"
flask_restx = "^1.3.0"
feedgen = "^0.9.0"
requests = "^2.32.4"


[tool.poetry.group.dev.dependencies]
sqlalchemy-schemadisplay = "^1.3"
pre-commit = "^2.18.1"
black = "^24.3.0"
pyupgrade = "^2.31.1"
reorder-python-imports = "^3.0.1"
pip-audit = "^2.4.13"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true

exclude = "build|dist|docs|"
